# wasm-calculator

./: .gitignore  adder.Dockerfile  docker-compose.yml  multiplier.Dockerfile  readme.md  subber.Dockerfile  wasm-add.Dockerfile  wasm-concat.Dockerfile  wasm-digit-count.Dockerfile  wasm-div.Dockerfile  wasm-max.Dockerfile  wasm-min.Dockerfile  wasm-modulus.Dockerfile  wasm-mul.Dockerfile  wasm-power.Dockerfile  wasm-sub.Dockerfile
frontend/: Cargo.toml  Trunk.toml  embedd_async.md  embedd_sync.md  index.html
frontend/src/: add_view.rs  main.rs  min_view.rs  sub_view.rs
frontend/src/modules/: add_view.rs  concat_view.rs  digit_count_view.rs  div_view.rs  max_view.rs  min_view.rs  mod.rs  modulus_view.rs  mul_view.rs  power_view.rs  sub_view.rs
modules/: add.wasm  adder.d.ts  adder.js  adder.wasm  adder.wat  digit-count.wasm  div.wasm  max.wasm  min.wasm  mod.wasm  mul.wasm  power.wasm
wasm-add/: aconfig.json  package.json
wasm-add/test/: test.js
wasm-adder/: aconfig.json  package.json
wasm-adder/src/: adder.ts
wasm-concat/: Package.swift
wasm-concat/Sources/SwiftWasmConcat/: main.swift
wasm-digit-count/: build.zig
wasm-digit-count/src/: main.zig
wasm-div/: main.go
wasm-max/: pom.xml
wasm-min/: Cargo.toml
wasm-min/src/: lib.rs
wasm-modulus/: pubspec.yaml
wasm-modulus/lib/: modulus.dart
wasm-mul/: build.gradle.kts  settings.gradle.kts
wasm-mul/gradle/: libs.versions.toml
wasm-mul/src/wasmJsMain/kotlin/: main.kt
wasm-multiplier/: build.gradle.kts
wasm-power/: power.py
wasm-subber/src/: subber.wat
(+2 files in other folders)
