[package]
name = "wasm-calculator"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
leptos = { version = "0.7.7", features = ["csr"] }
thaw = { version = "0.4.3", features = ["csr"] }

wasm-bindgen = { version = "0.2.100", features = ["serde"] }
web-sys = { version = "0.3", features = [
    "Response",
    "Window",
]}
js-sys = "0.3.77"
once_cell = "1.20.3"
futures = "0.3"
console_log = "1.0.0"
log = "0.4.26"